# lmrbot

./: README.rst  lmrbot.cabal  marxov  stack.yaml
doc/: config.yaml.example
etc/markov/: marxov  nlab  stirner  trek  trump
quotes/: arch  inspircd  linus  rms  rmsfact  theo  theo-licence
src/: Main.hs
src/Commands/: Admin.hs  CIA.hs  Crypto.hs  Distrowatch.hs  Github.hs  Interject.hs  Markov.hs  Quote.hs  Reddit.hs  RotCipher.hs  Wolfram.hs
src/Data/: BotConfig.hs  HostMask.hs  Response.hs
src/Pipes/: Network.hs
