name:                lmrbot
version:             0.1.0.0
synopsis:            A bot providing terribly useful features
description:         Please see README.rst
homepage:            https://github.com/githubuser/lmrbot#readme
license:             AGPL-3
license-file:        LICENSE
author:              tsahyt
maintainer:          tsahyt
copyright:           2017 tsahyt
category:            IRC
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.rst
                     quotes/rms
                     quotes/rmsfact
                     quotes/linus
                     quotes/theo
                     etc/wordlist.txt

executable lmrbot
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Data.BotConfig
                       Data.Response
                       Data.HostMask
                       Pipes.Network
                       Commands.Quote
                       Commands.Admin
                       Commands.Interject
                       Commands.Wolfram
                       Commands.Reddit
                       Commands.RotCipher
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       base >= 4.7 && < 5,
                       pipes,
                       pipes-bytestring,
                       bytestring,
                       network,
                       irc,
                       attoparsec,
                       transformers,
                       MonadRandom,
                       vector,
                       file-embed,
                       containers,
                       time,
                       yaml,
                       optparse-applicative,
                       servant,
                       servant-client,
                       mtl,
                       http-client,
                       http-client-tls,
                       aeson,
                       unordered-containers
